--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-env": "1.6.1",
-    "babel-loader": "7.1.4",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-react-constant-elements": "^7.12.1",
+    "@babel/plugin-transform-react-inline-elements": "^7.12.1",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "3.2.0",
     "webpack": "^4.41.6",
