--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.10.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -28,7 +30,12 @@
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "3.4.2",
     "html-webpack-plugin": "3.2.0",
+    "moment": "^2.29.1",
+    "ramda": "^0.27.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "0.23.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
